--------------------------------------------------------------------------------

name:                   untitled-wai
version:                0.0.1
synopsis:               TODO
description:            TODO
homepage:               https://github.com/mietek/untitled-wai
bug-reports:            https://github.com/mietek/untitled-wai/issues
license:                MIT
license-file:           LICENSE.md
author:                 Miëtek Bak
maintainer:             hello@mietek.io
copyright:              © 2014 Miëtek Bak
category:               Web
build-type:             Simple
cabal-version:          >= 1.10


executable untitled-wai
  main-is:                Main.hs
  hs-source-dirs:         src
  default-language:       Haskell2010
  build-depends:            base >= 4.6 && < 4.8
                          , bytestring
                          , hashable
                          , http-types
                          , postgresql-simple
                          , scrypt
                          , text
                          , time
                          , unix
                          , wai
                          , warp
  ghc-options:            -Wall
                          -O2
                          -fwarn-tabs
                          -funbox-strict-fields
                          -threaded
